# DS-AI-ML-flashcards

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
data/: taxonomy.json  wave-pilot-embeddings-retrieval.json
data/agent-specs/: _manifest.json  ai-llm-engineer__agents-tool-use.json  ai-llm-engineer__cutting-edge-topics-2025-2026.json  ai-llm-engineer__evaluation-benchmarking.json  ai-llm-engineer__fine-tuning-alignment.json  ai-llm-engineer__large-language-model-architectures.json  ai-llm-engineer__multi-modal-models-vision-language-models.json  ai-llm-engineer__production-systems-mlops-for-llms.json  ai-llm-engineer__prompt-engineering-in-context-learning.json  ai-llm-engineer__serving-infrastructure-inference-optimization.json  ai-llm-engineer__transformer-foundations-deep-dive.json  data-scientist__ab-testing-experimentation.json  data-scientist__causal-inference.json  data-scientist__classical-machine-learning.json  data-scientist__foundational-statistics-probability.json  data-scientist__hypothesis-testing-inference.json  data-scientist__probability-bayesian-thinking.json  data-scientist__product-business-sense.json  data-scientist__sql-data-manipulation.json  data-scientist__statistics-in-production.json  ml-engineer__classical-machine-learning-shared-with-ds-deeper-focus.json  ml-engineer__deep-learning-architectures.json  ml-engineer__feature-engineering-selection.json  (+14 more)
examples/: math_demo.rs
scripts/: extract_and_materialize.py  json_to_vault.py
src/: cli.rs  lib.rs  main.rs  reset.rs  util.rs
src/db/: mod.rs
tests/: sync_roundtrip.rs
(+477 files in other folders)
